--- a/resources/www/example_website/custom_error.html
+++ b/resources/www/example_website/custom_error.html
@@ -2,25 +2,47 @@
 <html lang="en">
 <head>
 <style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body {
+        font-family: "Arial", sans-serif;
+        text-align: center;
+        background: linear-gradient(135deg, #cb99ae, #75e398);
+        color: white;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .error-container {
+        background: rgba(0, 0, 0, 0.2);
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    h1 {
+        font-size: 80px;
+        margin-bottom: 10px;
+    }
+    h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
 </style>
 
-<title>ErrorPage</title>
+<title>Error 404</title>
 
 <meta name="robots" content="noindex, follow">
 </head>
 
 <body>
-<div id="errorblock">
-    <div class="errorblock" align="center">
-        <h2>Oops!</h2>
+    <div class="error-container">
         <h1>404</h1>
-        <h2>File not found</h2>
-        <h1>BUT CUSTOM!!!</h1>
+        <h2>Page Not Found</h2>
+        <p>The page you are looking for does not exist or has been removed.</p>
     </div>
-</div>
-
 </body>
 </html>
