--- a/resources/www/Kvast/index.html
+++ b/resources/www/Kvast/index.html
@@ -3,246 +3,120 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Кваст</title>
+    <title>Flower Boutique</title>
   </head>
   <body>
-    <div class ='page-header'>
-      <div class="container1">
+    <div class="page-header">
+      <div class="container">
         <div class="header-top clearfix">
           <div class="header-logo">
-            <img src="img/logo.png" alt="Кваст" >
+            <img src="img/logo.png" alt="Flower Boutique">
           </div>
-          <ul class="main-nav clearfix">
-            <li><a href="#">История</a></li>
-            <li><a href="#">Производство</a></li>
-            <li><a href="#">Ассортимент</a></li>
-            <li><a href="#">Где купить</a></li>
+          <ul class="main-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
         <div class="promo">
-          Крафтовый квас<br>всему голова!
+          <h1>Beautiful Flowers for Every Occasion!</h1>
         </div>
       </div>
     </div>
 
     <div class="new">
-      <div class="container1 clearfix">
-        <h2>Новинки</h2>
-        <div class="new-good">
-          <h3>Вахтёр</h3>
-          <div class="info">
-            <table>
-              <tr>
-                <td>Алк.</td>
-                <td>&lt; 1%</td>
-              </tr>
-              <tr>
-                <td>Ккал</td>
-                <td>35</td>
-              </tr>
-            </table>
-            <p>Ржаной хлеб, Вода, Солод, Соль</p>
+      <div class="container">
+        <h2>New Arrivals</h2>
+        <div class="products">
+          <div class="new-good">
+            <h3>Peonies</h3>
+            <img src="img/pion.gif" alt="Peonies">
+            <p>Elegant peonies, perfect for any occasion.</p>
+            <a class="btn btn-buy" href="#">Buy</a>
+            <b class="price">$25</b>
           </div>
-          <img src="img/bottle-left.jpg" alt="Вахтёр"><br>
-          <div class="description">
-            <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
-            <a class="btn btn-details" href="#">Подробнее</a>
-            <a class="btn btn-buy" href="#">Купить</a>
-            <b class="price">150 Р.</b>
-          </div>
-        </div>
 
-        <div class="new-good">
-          <h3>Романтик</h3>
-          <div class="info">
-            <table>
-              <tr>
-                <td>Алк.</td>
-                <td>&lt; 0,5%</td>
-              </tr>
-              <tr>
-                <td>Ккал</td>
-                <td>27</td>
-              </tr>
-            </table>
-            <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
+          <div class="new-good">
+            <h3>Tulips</h3>
+            <img src="img/tulips.png" alt="Tulips">
+            <p>Bright and cheerful tulips to bring joy to your day.</p>
+            <a class="btn btn-buy" href="#">Buy</a>
+            <b class="price">$20</b>
           </div>
-          <img src="img/bottle-right.jpg" alt="Романтик"><br>
-          <div class="description">
-            <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-            <a class="btn btn-details" href="#">Подробнее</a>
-            <a class="btn btn-buy" href="#">Купить</a>
-            <b class="price">90 Р.</b>
+
+          <div class="new-good">
+            <h3>Orchids</h3>
+            <img src="img/orchids.png" alt="Orchids">
+            <p>Exotic orchids to add elegance to any setting.</p>
+            <a class="btn btn-buy" href="#">Buy</a>
+            <b class="price">$30</b>
           </div>
         </div>
       </div>
-    </div>
+    </div> <!-- End of New Arrivals -->
 
-    <div class="advantage">
-      <div class="container2">
-        <ul class="clearfix">
-          <li class="advantage-item feature1">
-            <h2>Варим сами</h2>
-            <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
-          </li>
-          <li class="advantage-item feature2">
-            <h2>Своё, родное</h2>
-            <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
-          </li>
-          <li class="advantage-item feature3">
-            <h2>Не экономим</h2>
-            <p>Человек это то, что он ест и пьёт. У нас только качественные ингредиенты.</p>
-          </li>
-        </ul>
+    <div class="about">
+      <div class="container">
+        <h2>About Us</h2>
+        <p>At Flower Boutique, we provide the freshest flowers handpicked just for you. Whether it's a gift or home decor, we have something for everyone.</p>
       </div>
-    </div>
-
-    <div class="history">
-      <div class="container1">
-        <h2>Немного истории</h2>
-        <dl class="clearfix">
-          <dt>
-            Происхождение кваса <i>Источник: <a href="#">ru.wikipedia.org</a></i>
-          </dt>
-          <dd>
-            <img src="img/wiki-1.png">
-            <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас
-              готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
-          </dd>
-          <dt>
-            Классификация кваса <i>Источник: <a href="#">ru.wikipedia.org</a></i>
-          </dt>
-          <dd>
-            <img src="img/wiki-2.png">
-            <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового
-              спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
-          </dd>
-        </dl>
-      </div>
-    </div>
-
-    <div class="press">
-       <div class="container1">
-          <h2>Пресса о нас</h2>
-          <blockquote class="clearfix">
-            <p>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса.
-              Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</p>
-            <cite>Газета столичный Стольник </cite><a class="btn btn-read" href="#">Читать далее</a>
-          </blockquote>
-       </div>
-    </div>
-
-    <div class="price-table">
-     <div class="container1">
-        <h2>Ассортимент</h2>
-        <table class="range">
-          <tr>
-            <th>Название</th>
-            <th>Алк.</th>
-            <th>Ккал</th>
-            <th>Объём</th>
-            <th class="range-cost">Стоимость</th>
-          </tr>
-          <tr>
-            <td class="range-name">Классика</td>
-            <td class="range-alk">&lt; 1,2%</td>
-            <td class="range-kk">33</td>
-            <td class="range-volume">330 мл</td>
-            <td class="range-cost">120 Р.</td>
-          </tr>
-          <tr>
-            <td class="range-name">Шабаш</td>
-            <td class="range-alk">&gt; 1,2%</td>
-            <td class="range-kk">45</td>
-            <td class="range-volume">330 мл</td>
-            <td class="range-cost">250 Р.</td>
-          </tr>
-          <tr>
-            <td class="range-name">Вахтёр <sup>Новинка</sup></td>
-            <td class="range-alk">&lt; 1%</td>
-            <td class="range-kk">35</td>
-            <td class="range-volume">0,5 л</td>
-            <td class="range-cost">150 Р.</td>
-          </tr>
-          <tr>
-            <td class="range-name">Романтик <sup>Новинка</sup></td>
-            <td class="range-alk">&lt; 0,5%</td>
-            <td class="range-kk">27</td>
-            <td class="range-volume">0,5 л</td>
-            <td class="range-cost">90 Р.</td>
-          </tr>
-        </table>
-     </div>
     </div>
 
     <div class="order">
-      <div class="container1">
-        <h2>Заказать</h2>
-        <p>Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%.</p>
-        <form class="feedback-form" action="/keksby-mail" method="post">
-          <div class="feedback-form-item">
-            <label for="fullname">Представьтесь:</label>
-            <input type="text"  name="fullname" id="fullname">
+      <div class="container">
+        <h2>Order Now</h2>
+        <p>Place your order today and enjoy our special discounts for bulk purchases!</p>
+        <form class="order-form" action="/submit-order" method="post">
+          <div class="form-item">
+            <label for="fullname">Your Name:</label>
+            <input type="text" name="fullname" id="fullname" required>
           </div>
-          <div class="clearfix">
-            <div class="feedback-form-item feedback-form-item-left">
-              <label for="phone">Номер телефона:</label>
-              <input type="text" name="phone" id="phone">
-            </div>
-            <div class="feedback-form-item feedback-form-item-right">
-              <label for="dop-phone">Доп. номер:</label>
-              <input type="text" name="dop-phone" id="dop-phone">
-            </div>
+          <div class="form-item">
+            <label for="phone">Phone Number:</label>
+            <input type="text" name="phone" id="phone" required>
           </div>
-          <div class="feedback-form-item">
+          <div class="form-item">
             <label for="email">Email:</label>
-            <input type="text" name="email" id="email">
+            <input type="email" name="email" id="email" required>
           </div>
-          <div class="feedback-form-item">
-            <label for="volume-order">Объём заказа:</label><br>
-              <select name="volume-order" id="volume-order">
-                <option>От 5 до 10 баррелей в неделю</option>
-                <option>От 10 до 20 баррелей в неделю</option>
-                <option>От 20 до 30 баррелей в неделю</option>
-              </select>
+          <div class="form-item">
+            <label for="flowers">Choose Flowers:</label>
+            <select name="flowers" id="flowers">
+              <option value="roses">Roses</option>
+              <option value="tulips">Tulips</option>
+              <option value="orchids">Orchids</option>
+              <option value="sunflowers">Sunflowers</option>
+              <option value="mixed">Mixed Bouquet</option>
+            </select>
           </div>
-          <div class="feedback-form-item">
-            <label for="message">Доп. комментарий:</label>
+          <div class="form-item">
+            <label for="message">Additional Notes:</label>
             <textarea name="message" id="message"></textarea>
           </div>
-          <div class="checkbox-area">
-            <input type="checkbox" name="spam" id="spam" checked>
-             <label for="spam">Я согласен получать квасную рассылку</label>
-          </div>
-          <input class="btn" type="submit" value="Отправить заказ" disabled>
+          <input class="btn" type="submit" value="Place Order">
         </form>
       </div>
     </div>
 
-
     <div class="page-footer">
-      <div class="container2">
+      <div class="container">
         <div class="footer-top clearfix">
           <div class="footer-logo">
-            <img src="img/logo.png" alt="Кваст">
+            <img src="img/logo.png" alt="Flower Boutique">
           </div>
           <ul class="main-nav">
-            <li><a href="#">История</a></li>
-            <li><a href="#">Производство</a></li>
-            <li><a href="#">Ассортимент</a></li>
-            <li><a href="#">Где купить</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
-
-        <div class="footer-bottom clearfix">
-          <div class="footer-social">
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          </div>
-          <p>При перепечатке материалов ссылка на сайт обязательна!</p>
-          <div class="razrab">
-            <a class="social-btn" href="#"><img src="img/htmlacademy.png"></a><span><b>Разработчик: </b><a href="#" title="Сайт разработчика">HTML Academy</a></span>
+        <div class="footer-bottom">
+          <p>Follow us on social media for the latest updates!</p>
+          <div class="social-links">
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
           </div>
         </div>
       </div>
