--- a/resources/default_pages/default_index.html
+++ b/resources/default_pages/default_index.html
@@ -1,38 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<meta charset="UTF-8">
-    
 <head>
-<title>Welcome to WEBSERV!</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Flower Webserv!</title>
+    <link rel="icon" href="data:,">
+    <style>
+        html {
+            color-scheme: light dark;
+        }
+
+        body {
+            width: 40em;
+            margin: 0 auto;
+            font-family: Tahoma, Verdana, Arial, sans-serif;
+            background-color: #fdf6e3;
+            color: #333;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            color: #ff7f9c;
+            margin-bottom: 0.5em;
+        }
+
+        p {
+            font-size: 1.2em;
+            line-height: 1.6;
+            color: #555;
+        }
+
+        .ascii-art {
+            font-family: monospace;
+            font-size: 0.9em;
+            color: #6a994e;
+            margin: 1em 0;
+            white-space: pre-wrap;
+        }
+
+        em {
+            color: #23412f;
+            font-style: italic;
+        }
+    </style>
 </head>
 
 <body>
 
-    <h1>Welcome to WEBSERV!</h1>
+    <h1>Welcome to Flower Webserv!</h1>
 
-    <p>If you see this page, the <b><i>webserv</i></b> web server is successfully installed and
-working. Further configuration is required.</p>
-    
-    <h4 align="center">⣿⣿⣿⣿⣿⣿⡿⣟⠻⠯⠭⠉⠛⠋⠉⠉⠛⠻⢿⣿⣿⣿⣿⣿⣿
-    ⣿⣿⣿⣿⡽⠚⠉⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⠀⠈⠙⢿⣿⣿⣿⣿
-    ⣿⣿⠏⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣷⣦⡀⠶⣿⣿⣿⣿
-    ⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⡆⢻⣿⣿⣿
-    ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣤⣻⣿⣯⣤⣹⣿⣿
-    ⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⢿⣿⡇⠀⣿⢟⣿⡀⠟⢹⣿⣿
-    ⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣷⣤⣤⣼⣿⣿⡄⢹⣿⣿
-    ⣷⠀⠀⠀⠶⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⣿⣿⣿⠛⠉⠈⢻⣿
-    ⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠛⠋⠛⠛⠛⠀⠀⣤⣾⣿
-    ⣿⣿⣿⣷⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠉⠛⠁⣰⣿⣿⣿
-    ⣿⣿⣿⣿⣿⣷⣦⣤⣤⣤⣤⣄⣀⣀⣀⣀⣀⣠⣤⣤⣤⣾⣿⣿⣿</h4>
+    <p>If you see this page, the <b><i>webserv</i></b> is blooming beautifully and ready to grow!</p>
+    <p>Further configuration will help your flower-themed server flourish.</p>
 
-    <p><em>Thank you for evaluating our webserv ^^ </em></p>
+    <div class="ascii-art">
+        🌸 🌼 🌷 🌹 🌺 🌻 🌸 🌼 🌷 🌹 🌺 🌻 🌸 🌼 🌷 🌹 🌺 🌻<br>
+        🌼        Welcome to the Garden of Webserv!        🌼<br>
+        🌷  Where every request blossoms into something beautiful.  🌷<br>
+        🌹 🌺 🌻 🌸 🌼 🌷 🌹 🌺 🌻 🌸 🌼 🌷 🌹 🌺 🌻 🌸 🌼 🌷
+    </div>
 
+    <p><em>Thank you for planting your trust in Flower Webserv!</em></p>
 
 </body>
+
 </html>
