--- a/resources/default_pages/errors/400.html
+++ b/resources/default_pages/errors/400.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>400 - Bad Request</title>
+    <style>
+        html {
+            color-scheme: light dark;
+        }
 
-<title>ErrorPage</title>
+        body {
+            width: 35em;
+            margin: 0 auto;
+            font-family: Tahoma, Verdana, Arial, sans-serif;
+            background-color: #fdf6e3;
+            color: #333;
+            text-align: center;
+        }
 
-<meta name="robots" content="noindex, follow">
+        h1 {
+            font-size: 3em;
+            color: #ff6f61;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            color: #6a994e;
+        }
+
+        p {
+            font-size: 1.2em;
+            color: #555;
+        }
+
+        .flower {
+            font-size: 2em;
+            margin: 1em 0;
+        }
+    </style>
 </head>
-
 <body>
-<div id="errorblock">
-    <div class="errorblock" align="center">
-        <h2>Oops!</h2>
-        <h1>400</h1>
-        <h2>Bad Request</h2>
+    <div id="errorblock">
+        <div class="errorblock" align="center">
+            <h2>Oops! Something went wrong...</h2>
+            <h1>400</h1>
+            <h2>Bad Request</h2>
+            <p>It seems your request got lost in the garden. Please check and try again!</p>
+            <div class="flower">🌸 🌼 🌷 🌹 🌺 🌻</div>
+        </div>
     </div>
-</div>
-
 </body>
 </html>
