--- a/resources/default_pages/errors/411.html
+++ b/resources/default_pages/errors/411.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>411 - Length Required</title>
+	<link rel="icon" href="data:,">
     <style>
         html {
             color-scheme: light dark;
